# build123d-cad-template

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml
.github/workflows/: cad-release.yml  lint-and-run.yml
cad/: part1.py
