[project]
name = "cad"
version = "0.0.0"
dependencies = [
    "loguru",
    "GitPython",
    "build123d==0.9.0",
    "ocp_vscode",
    "bd_warehouse @ git+https://github.com/gumyr/bd_warehouse@b7e0dbe87e76244282651e903f6f55257a298219",
    "build123d-ease==0.2.0.0",
    "gggears @ git+https://github.com/GarryBGoode/gggears.git",
]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "ruff>=0.12.8",
]

[tool.pyright]
typeCheckingMode = "basic"

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # No blank line before class docstring.
    "D213", # Fix bad default.
    "ERA001", # Commented out code.
    "S101",  # Use of `assert` statement.
    "RET504",  # Assignment right before return.
    "COM812", # Missing comma at the end of a function call. Bad in show() call.
    "D100", # Missing docstring in public module.
    "TD003", # Ignore: Consider fixing the TODO. Obviously I'm gonna fix it.
    "FIX002", # Ignore: TODOs must have associated issues.
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
